see #34 level 4px border problem fixed on small windows

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -156,6 +156,9 @@ section.container
   body
     padding: 0
   section.container
+    width: 860px
+    margin: 0
+    padding: 40px 20px 0 20px
     aside
       position: static
       width: 100%
